--------------------------------------------------------------------------------

name:                   catools
version:                0.0.1
synopsis:               TODO
description:            TODO
homepage:               https://github.com/mietek/catools
bug-reports:            https://github.com/mietek/catools/issues
license:                MIT
license-file:           LICENSE.md
author:                 Miëtek Bak
maintainer:             hello@mietek.io
copyright:              © 2014 Miëtek Bak
build-type:             Simple
cabal-version:          >= 1.10

executable caparse
  main-is:                caparse.hs
  hs-source-dirs:         src src/caparse
  default-language:       Haskell2010
  build-depends:            base >= 4.6 && < 4.8
                          , bytestring
                          , cassava
                          , Decimal
                          , lens
                          , time
  ghc-options:            -Wall
                          -O2
                          -fwarn-tabs
                          -funbox-strict-fields
                          -threaded

executable cascrape
  main-is:                cascrape.hs
  hs-source-dirs:         src src/cascrape
  default-language:       Haskell2010
  build-depends:            base >= 4.6 && < 4.8
                          , bytestring
                          , Decimal
                          , http-client
                          , lens
                          , mtl
                          , split
                          , tagsoup
                          , time
                          , wreq
  ghc-options:            -Wall
                          -O2
                          -fwarn-tabs
                          -funbox-strict-fields
                          -threaded

--------------------------------------------------------------------------------
